force-app/main/default/objects/Alliance_Surveys__c/Alliance_Surveys__c.object-meta.xml
<CustomObject>
    <label>Alliance Surveys</label>
    <nameField>
        <label>Alliance Surveys Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alliance Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>