force-app/main/default/objects/Alliance_Surveys__c/fields/Additional_Comments_or_Questions__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments_or_Questions__c</fullName>
    <inlineHelpText>Additional Comments or Questions:</inlineHelpText>
    <label>Additional Comments or Questions:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>