force-app/main/default/objects/Alliance_Surveys__c/fields/Areas_of_Climate_Action_Most_Interested__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Climate_Action_Most_Interested__c</fullName>
    <label>Areas of Climate Action Most Interested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technological Solutions (i.e. Renewable energy)</fullName>
                <label>Tech Solutions (i.e. Renewables)</label>
            </value>
            <value>
                <fullName>Financial Solutions</fullName>
            </value>
            <value>
                <fullName>Climate Science</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Lobbying/Communicating with Elected Officials</fullName>
                <label>Lobbying-Meeting with Elected Officials</label>
            </value>
            <value>
                <fullName>Running for Office</fullName>
            </value>
            <value>
                <fullName>Public Speaking/Media Training</fullName>
            </value>
            <value>
                <fullName>How to Address Climate Hypocrisy</fullName>
            </value>
            <value>
                <fullName>Diversity, Equity &amp; Inclusion/Climate Justice</fullName>
                <label>DEI and Climate Justice</label>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Storytelling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>