force-app/main/default/objects/Alliance_Surveys__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Alliance Surveys</relationshipLabel>
    <relationshipName>Alliance_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>