force-app/main/default/objects/Alliance_Surveys__c/fields/Engagement_Areas_No_Participation__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Areas_No_Participation__c</fullName>
    <label>Engagement Areas No Participation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Lobbying</fullName>
            </value>
            <value>
                <fullName>Public Speaking</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>