force-app/main/default/objects/Alliance_Surveys__c/fields/Experiences_or_accomplishments__c.field-meta.xml
<CustomField>
    <fullName>Experiences_or_accomplishments__c</fullName>
    <label>Science experiences or accomplishments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>