force-app/main/default/objects/Alliance_Surveys__c/fields/First_or_Most_Memorable_Experience__c.field-meta.xml
<CustomField>
    <fullName>First_or_Most_Memorable_Experience__c</fullName>
    <description>Write about your first (or most memorable) experience with seeing or learning about climate change (400 characters or less)</description>
    <inlineHelpText>Write about your first (or most memorable) experience with seeing or learning about climate change (400 characters or less)</inlineHelpText>
    <label>First or Most Memorable Experience</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>