force-app/main/default/objects/Alliance_Surveys__c/fields/H_index_Score__c.field-meta.xml
<CustomField>
    <fullName>H_index_Score__c</fullName>
    <label>H-index Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>