force-app/main/default/objects/Alliance_Surveys__c/fields/How_does_your_research_contribute_to_cli__c.field-meta.xml
<CustomField>
    <fullName>How_does_your_research_contribute_to_cli__c</fullName>
    <description>How does your research contribute to climate solutions?</description>
    <inlineHelpText>How does your research contribute to climate solutions?</inlineHelpText>
    <label>Research contributes to climate change</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>