force-app/main/default/objects/Alliance_Surveys__c/fields/In_your_own_words_describe_what_you_know__c.field-meta.xml
<CustomField>
    <fullName>In_your_own_words_describe_what_you_know__c</fullName>
    <inlineHelpText>In your own words describe what you know about Protect Our Winters and what we do?</inlineHelpText>
    <label>Describe what you know about POW</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>