force-app/main/default/objects/Alliance_Surveys__c/fields/Involved_in_other_causes_or_orgs__c.field-meta.xml
<CustomField>
    <fullName>Involved_in_other_causes_or_orgs__c</fullName>
    <inlineHelpText>Are you involved in other causes or organizations? If so, please list the top 1-3 that you dedicate the most time to right now.</inlineHelpText>
    <label>Involved in other causes or orgs?</label>
    <type>TextArea</type>
</CustomField>