force-app/main/default/objects/Alliance_Surveys__c/fields/List_out_your_top_achievements_up_to_5__c.field-meta.xml
<CustomField>
    <fullName>List_out_your_top_achievements_up_to_5__c</fullName>
    <description>List out your top achievements (up to 5) in your career</description>
    <inlineHelpText>List out your top achievements (up to 5) in your career</inlineHelpText>
    <label>Top 5 Achievements</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>