force-app/main/default/objects/Alliance_Surveys__c/fields/Member_s_Photographers_Videographers__c.field-meta.xml
<CustomField>
    <fullName>Member_s_Photographers_Videographers__c</fullName>
    <description>Provide the names of 1 or more of your favorite photographers and videographers you work with</description>
    <label>Member&apos;s Photographers/Videographers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>