force-app/main/default/objects/Alliance_Surveys__c/fields/Number_of_Citations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Citations__c</fullName>
    <label>Number of Citations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>