force-app/main/default/objects/Alliance_Surveys__c/fields/Public_Speaking_Rank__c.field-meta.xml
<CustomField>
    <fullName>Public_Speaking_Rank__c</fullName>
    <description>POW Engages in various activations areas to amplify your voice. Please rank your skill in the following areas. This will help us best educate and support you with the right training and resources. (1 being low competency, and 5 being high competency):</description>
    <inlineHelpText>POW Engages in various activations areas to amplify your voice. Please rank your skill in the following areas. This will help us best educate and support you with the right training and resources. (1 being low competency, and 5 being high competency):</inlineHelpText>
    <label>Public Speaking Rank</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>