force-app/main/default/objects/Alliance_Surveys__c/fields/Reason_for_not_wanting_to_participate__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_not_wanting_to_participate__c</fullName>
    <label>Reason for not wanting to participate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>