force-app/main/default/objects/Alliance_Surveys__c/fields/Referred_by__c.field-meta.xml
<CustomField>
    <fullName>Referred_by__c</fullName>
    <label>Referred by</label>
    <length>40</length>
    <type>Text</type>
</CustomField>