force-app/main/default/objects/Alliance_Surveys__c/fields/Top_Sponsors__c.field-meta.xml
<CustomField>
    <fullName>Top_Sponsors__c</fullName>
    <label>Top Sponsors</label>
    <type>TextArea</type>
</CustomField>