force-app/main/default/objects/Alliance_Surveys__c/fields/What_area_s_are_you_most_concerned_with__c.field-meta.xml
<CustomField>
    <fullName>What_area_s_are_you_most_concerned_with__c</fullName>
    <inlineHelpText>What area(s) are you most concerned with when speaking up about climate change?</inlineHelpText>
    <label>What area(s) are you most concerned with</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Being perceived as a hypocrite</fullName>
            </value>
            <value>
                <fullName>A lack of understanding of the science (what is climate change, the negative impacts, etc...)</fullName>
            </value>
            <value>
                <fullName>Lack of understanding of the solutions (solar, wind, etc...)</fullName>
            </value>
            <value>
                <fullName>Lack of understanding on how policy influences solutions</fullName>
            </value>
            <value>
                <fullName>Lack of understanding on policy process (i.e. how bills become laws, which lawmakers have decision making power, etc...)</fullName>
            </value>
            <value>
                <fullName>Lack of understanding on how to lobby</fullName>
            </value>
            <value>
                <fullName>Public speaking skills</fullName>
            </value>
            <value>
                <fullName>Challenges building presentations</fullName>
            </value>
            <value>
                <fullName>Fear of questions from followers and fans you may not know the answers to</fullName>
            </value>
            <value>
                <fullName>Negatively impacting your personal brand</fullName>
            </value>
            <value>
                <fullName>Losing followers</fullName>
            </value>
            <value>
                <fullName>Hesitation speaking up on your social media</fullName>
            </value>
            <value>
                <fullName>Writing skills</fullName>
            </value>
            <value>
                <fullName>Calling elected officials</fullName>
            </value>
            <value>
                <fullName>Engaging with media</fullName>
            </value>
            <value>
                <fullName>Just feeling overwhelmed</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know where to start or how to help</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>