force-app/main/default/objects/Alliance_Surveys__c/fields/Where_did_you_grow_up_city_state__c.field-meta.xml
<CustomField>
    <fullName>Where_did_you_grow_up_city_state__c</fullName>
    <label>Other region affiliated with</label>
    <length>50</length>
    <type>Text</type>
</CustomField>