force-app/main/default/objects/Alliance_Surveys__c/fields/Which_of_POW_s_Policy_Areas_interests_yo__c.field-meta.xml
<CustomField>
    <fullName>Which_of_POW_s_Policy_Areas_interests_yo__c</fullName>
    <inlineHelpText>Which of POW&apos;s Policy Areas interests you most:</inlineHelpText>
    <label>POW&apos;s Policy Areas of interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewable Energy</fullName>
            </value>
            <value>
                <fullName>Innovating Transportation</fullName>
            </value>
            <value>
                <fullName>Carbon Pricing</fullName>
            </value>
            <value>
                <fullName>Public Lands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>