force-app/main/default/objects/Alliance_Surveys__c/fields/Which_of_POW_s_Theory_Of_Change_areas_ar__c.field-meta.xml
<CustomField>
    <fullName>Which_of_POW_s_Theory_Of_Change_areas_ar__c</fullName>
    <inlineHelpText>Which of POW&apos;s Theory Of Change areas are you most interested in:</inlineHelpText>
    <label>Theory Of Change areas of most interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance and Technological Solutions</fullName>
            </value>
            <value>
                <fullName>Political Will</fullName>
            </value>
            <value>
                <fullName>Cultural Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>