force-app/main/default/objects/Alliance_Surveys__c/fields/Why_are_you_interested_in_POW__c.field-meta.xml
<CustomField>
    <fullName>Why_are_you_interested_in_POW__c</fullName>
    <inlineHelpText>Why are you interested in being involved with Protect Our Winters?</inlineHelpText>
    <label>Why are you interested in POW?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>